<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeHold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickupDate"
        android:layout_gravity="center">
    </TextView>

    <EditText
        android:id="@+id/pickupDateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pickupDateHint"
        android:focusable="false"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickupTime"
        android:layout_gravity="center">
    </TextView>

    <Spinner
        android:id="@+id/pickupTimeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnDate"
        android:layout_gravity="center">
    </TextView>

    <EditText
        android:id="@+id/returnDateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/returnDateHint"
        android:focusable="false"
        android:layout_gravity="center"
        android:gravity="center_horizontal">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnTime"
        android:layout_gravity="center">
    </TextView>

    <Spinner
        android:id="@+id/returnTimeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </Spinner>

    <TextView
        android:id="@+id/dateErrorTextView"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorRed"
        android:layout_gravity="center"
        android:visibility="gone">
    </TextView>

    <Button
        android:id="@+id/confirmRentalErrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:visibility="gone">
    </Button>

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exit"
        android:visibility="gone">
    </Button>

    <TableLayout
        android:id="@+id/bookTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </TableLayout>
</LinearLayout>
    </ScrollView>