<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerLogin">
    </TextView>

    <EditText
        android:id="@+id/customerUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usernameHint"
        android:layout_gravity="center">
    </EditText>

    <EditText
        android:id="@+id/customerPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textWebPassword"
        android:layout_gravity="center">
    </EditText>

    <Button
        android:id="@+id/customerLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center">
    </Button>

    <TextView
        android:id="@+id/customerLoginMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorRed"
        android:layout_gravity="center">
    </TextView>

    <Button
        android:id="@+id/customerLoginOkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/ok">
    </Button>

</LinearLayout>