<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/librarianLogin">
        </TextView>

        <EditText
            android:id="@+id/librarianUsernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/usernameHint"
            android:layout_gravity="center">
        </EditText>

        <EditText
            android:id="@+id/librarianPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:inputType="textWebPassword"
            android:layout_gravity="center">
        </EditText>

        <Button
            android:id="@+id/librarianLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center">
        </Button>

        <TextView
            android:id="@+id/librarianLoginMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorRed"
            android:layout_gravity="center">
        </TextView>

        <Button
            android:id="@+id/librarianLoginOkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/ok">
        </Button>

    </LinearLayout>

</ScrollView>