<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerCreate">
    </TextView>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usernameHint"
        android:layout_gravity="center">
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:layout_gravity="center"
        android:inputType="textWebPassword"
        />

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/customerCreate"
        />

    <TextView
        android:id="@+id/validMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colorRed"
        />

    <Button
        android:id="@+id/customerOkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:visibility="gone">
    </Button>

</LinearLayout>
